--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -16,7 +16,7 @@ const {
 } = Astro.props as Props;
 ---
 
-<footer class="py-4 text-sm bg-light">
+<footer class="py-4 text-sm bg-light  dark:bg-black">
   <Container>
     {socialLinks && (
       <div class="flex flex-wrap justify-center gap-4 my-12 w-full">
