--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -7,7 +7,7 @@ import Menu from './components/menu/Menu.astro';
 ---
 
 <header id="header" role="navigation" class="header">
-  <Containter classes="flex flex-wrap items-center justify-between lg:flex-nowrap">
+  <Containter classes="flex flex-wrap items-center justify-between font-sans lg:flex-nowrap">
     <Logo />
     <Hamburger />
     <Menu />
