--- a/src/components/header/components/ThemeSwitch.astro
+++ b/src/components/header/components/ThemeSwitch.astro
@@ -3,17 +3,15 @@ import { Icon } from 'astro-icon';
 
 const THEME_SWITCH_ID = 'theme-switch';
 ---
-<label class="theme-switch-label">
+<label class="theme-switch">
   <input id={THEME_SWITCH_ID} type="checkbox" />
   <Icon name="sun-regular" class="sun" />
   <Icon name="moon-regular" class="moon" />
 </label>
 
 <style lang="scss">
-  .theme-switch-label {
+  .theme-switch {
     cursor: pointer;
-    width: 1rem;
-    height: 1rem;
     color: white;
   }
 
@@ -21,21 +19,18 @@ const THEME_SWITCH_ID = 'theme-switch';
     width: 1rem;
     height: 1rem;
   }
+  .moon {
+    display: none;
+  }
 
   #theme-switch {
-    opacity: 0;
-    width: 0;
-    height: 0;
-
+    display: none;
     &:checked {
-      &+svg.sun {
+      & + .sun {
         display: none;
       }
-    }
-
-    &:not(:checked) {
-      &+svg.moon {
-        display: none;
+      & ~ .moon {
+        display: block;
       }
     }
   }
@@ -53,12 +48,10 @@ const THEME_SWITCH_ID = 'theme-switch';
   const setToDark = isDarkThemeSet || (!isThemeStored && isDarkPrefered);
   document.documentElement.classList.toggle(DARK_THEME, setToDark);
   themeSwitch.checked = setToDark;
-  console.log('onload theme=', setToDark ? 'dark' : 'light');
 
   const onClick = () => {
     const setToDark = themeSwitch.checked;
     document.documentElement.classList.toggle(DARK_THEME, setToDark);
-    console.log('onClick value=', setToDark);
     if (window.localStorage) {
       window.localStorage.theme = setToDark ? DARK_THEME : 'light';
     }
