--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -12,17 +12,17 @@ const {
 } = Astro.props as Props;
 ---
 
-<PageSection id={id} title={title} subtitle={subtitle} classes="bg-light">
+<PageSection id={id} title={title} subtitle={subtitle} classes="bg-light dark:bg-gray-900">
   <div class="grid gap-12 lg:grid-cols-3">
     {image?.src && (
       <Image
         src={getImagePath(image.src)}
         alt={image.alt}
         classes="mx-auto mb-3"
-        imgClasses="w-60 h-60 border-4 rounded-full"
+        imgClasses="w-60 h-60 border-round"
         caption={image.caption}
       />
     )}
-    {html && <div set:html={html} class="text-justify text-muted lg:col-span-2" />}
+    {html && <div set:html={html} class="text-justify lg:col-span-2" />}
   </div>
 </PageSection>
