--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -10,7 +10,7 @@ const {
   section: { id, title, subtitle, html: content, items },
 } = Astro.props as Props;
 ---
-<PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center bg-light">
+<PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center">
   <div id="gallery--simple" class="pswp-gallery grid gap-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6">
     {items?.filter(({image}) => image?.src).map((item) => <GalleryItem item={item} />)}
   </div>
