--- a/src/components/sections/ServiceItem.astro
+++ b/src/components/sections/ServiceItem.astro
@@ -9,10 +9,10 @@ import Image from '@/components/images/Image.astro';
 const { item: { title, content, image } } = Astro.props as Props;
 ---
 
-<li class="text-center">
+<div class="w-full lg:w-1/3 text-center">
   {image?.src && (
-    <Image src={getImagePath(image.src)} alt={image.alt} classes="mb-4" caption={image.caption} />
+    <Image src={getImagePath(image.src)} alt={image.alt} classes="mb-4 w-full max-w-full h-full object-cover" imgClasses="w-full h-full max-w-full object-cover" caption={image.caption} />
   )}
   <h3 class="mb-4">{title}</h3>
-  <div class="text-muted">{content}</div>
-</li>
+  <p>{content}</p>
+</div>
