--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -11,7 +11,7 @@ const {
 ---
 
 <PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center">
-  <ul class="grid gap-12 grid-cols-[100%] lg:grid-cols-3">
+  <div class="flex gap-12 flex-wrap">
     {items?.map((item) => <ServiceItem item={item} />)}
-  </ul>
+  </div>
 </PageSection>
