--- a/src/components/Top.astro
+++ b/src/components/Top.astro
@@ -14,10 +14,9 @@ const top = await fetchTop(locale);
 
 const { title = '', subtitle = '', items = null } = top || {};
 
-const sources = items?.map(({ image }) => {
-  if (!image) {
-    throw new Error('ArtImage: image required');
-  }
+const { title: buttonCaption } = items?.filter(({ image }) => !image)[0];
+
+const sources = items?.filter(({ image }) => image).map(({ image }) => {
   const { src, caption } = image;
   if (!src) {
     throw new Error('ArtImage: Image src required');
@@ -32,7 +31,7 @@ const alt = items && items[0] && items[0].image ? items[0].image.alt : '';
 <div class="grid">
   {sources && <ArtImage sources={sources} alt={alt} loading="eager" classes="col-start-1 row-start-1" />}
   <div class="col-start-1 row-start-1 px-4 text-center flex flex-col-reverse justify-center items-center">
-    <Button tag="a" to="#services">hello</Button>
+    <Button tag="a" to="#services">{buttonCaption}</Button>
     <h1 class="txt uppercase font-bold text-3xl md:mb-6 md:text-4xl lg:text-6xl">{title}</h1>
     {subtitle && <div class="txt mb-8 text-2xl italic">{subtitle}</div>}
   </div>
