--- a/src/components/header/components/menu/Menu.astro
+++ b/src/components/header/components/menu/Menu.astro
@@ -12,18 +12,25 @@ const navItems = await fetchMainNav(locale);
 ---
 
 <nav id="main-nav" class="main-nav">
-  <ul id="menu-items" aria-label="Main menu" class="flex flex-col ml-auto lg:flex-row">
+  <menu id="main-menu" aria-label="Main menu" class="main-menu">
     {navItems.map(({ title, to }) => <NavItem to={to} title={title} />)}
-  </ul>
-  <ThemeSwitch />
-  <LanguageSwitch />
+  </menu>
+  <div class="flex justify-center items-center">
+    <LanguageSwitch />
+    <div class="ml-4 lg:ml-0">
+      <ThemeSwitch />
+    </div>
+  </div>
 </nav>
 
 <style>
   .main-nav {
-    @apply hidden grow basis-full items-center py-4 lg:!flex lg:basis-auto lg:py-0;
+    @apply hidden grow basis-full items-center py-4 lg:!flex lg:!flex-row lg:basis-auto lg:py-0;
   }
   .main-nav.open {
-    @apply !block;
+    @apply !flex flex-col;
+  }
+  .main-menu {
+    @apply flex flex-col self-start lg:flex-row lg:self-auto lg:ml-auto;
   }
 </style>
