--- a/src/components/sections/ContactItem.astro
+++ b/src/components/sections/ContactItem.astro
@@ -9,10 +9,12 @@ import { Icon } from 'astro-icon';
 const { icon, to, title, text } = Astro.props as Props;
 ---
 
-<li class="flex flex-col items-center">
-  <Icon name={icon} class="h-12 w-12 mb-4 text-muted dark:text-gray-50" />
-  <div>
-    {title && <span class="mr-1">{title}:</span>}
-    <a href={to} target="_blank" rel="noindex noopener noreferrer">{text}</a>
-  </div>
+<li>
+  <a href={to} target="_blank" rel="noindex noopener noreferrer" class="flex flex-col items-center">
+    <Icon name={icon} class="h-12 w-12 mb-4 body-text__color" />
+    <div>
+      {title && <span class="mr-1 body-text__color">{title}:</span>}
+      {text}
+    </div>
+  </a>
 </li>
