--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/global.css';
+// import '../styles/global.css';
 
 import i18n from '@/config/i18n';
 import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
