--- a/src/components/header/components/Hamburger.astro
+++ b/src/components/header/components/Hamburger.astro
@@ -4,7 +4,7 @@
   <div class="toggle-line"></div>
 </button>
 
-<style lang="scss">
+<style>
   .menu-toggle {
     @apply relative  m-0 flex h-12
     w-12 cursor-pointer
