--- a/src/components/header/components/ThemeSwitch.astro
+++ b/src/components/header/components/ThemeSwitch.astro
@@ -34,7 +34,7 @@ const THEME_SWITCH_ID = 'theme-switch';
   themeSwitch.addEventListener('click', onClick);
 </script>
 
-<style lang="scss">
+<style>
   .theme-switch {
     @apply cursor-pointer text-white opacity-50 transition duration-300 hover:opacity-100;
   }
