--- a/src/components/sections/GalleryItem.astro
+++ b/src/components/sections/GalleryItem.astro
@@ -47,7 +47,7 @@ const { metadata, lowsrc, highsrc } = getMetadata(src, opts);
   </div>
 </a>
 
-<style lang="scss">
+<style>
 .gallery-box {
   @apply block relative bg-transparent hover:text-[#d6370c];
 }
