--- a/src/components/header/components/LanguageSwitch.astro
+++ b/src/components/header/components/LanguageSwitch.astro
@@ -31,7 +31,7 @@ const currentLocale = i18n.locales[locale];
   </div>
 </div>
 
-<style lang="scss">
+<style>
 .language-selector {
   position: relative;
 
