--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,7 +2,8 @@
 export interface Props {
   section: Section;
 }
-import getImagePath from '@/lib/getImagePath';
+
+import getImagePath from '@/helpers/getImagePath';
 
 import PageSection from '../PageSection.astro';
 import Image from '@/components/images/Image.astro';
