--- a/src/components/sections/TestimonialItem.astro
+++ b/src/components/sections/TestimonialItem.astro
@@ -3,7 +3,7 @@ export interface Props {
   item: SectionItem;
 }
 
-import getImagePath from '@/lib/getImagePath';
+import getImagePath from '@/helpers/getImagePath';
 import Image from '@/components/images/Image.astro';
 
 const {
