--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -9,26 +9,28 @@ import Link from './LocalizedLink.astro';
 
 const { to = '', target = '', classes = '', tag = 'button' } = Astro.props as Props;
 
-const styles = `
-at-a
-mx-2 my-2
-px-6 py-2
-w-fit
-text-white
-text-xs
-uppercase
-bg-primary
-rounded-full
-transition duration-150 ease-in-out
-hover:bg-primary-light
-focus:ring-2
-focus:ring-offset-2
-focus:ring-primary-light
-${classes}`;
-
 ---
-{tag === 'link' && <Link class={styles} to={to}><slot /></Link>}
+{tag === 'link' && <Link class={`btn ${classes}`} to={to}><slot /></Link>}
 
-{tag === 'a' && <a class={styles} href={to} target={target}><slot /></a>}
+{tag === 'a' && <a class={`btn ${classes}`} href={to} target={target}><slot /></a>}
 
-{tag === 'button' && <button class={styles}><slot /></button>}
+{tag === 'button' && <button class={`btn ${classes}`}><slot /></button>}
+
+<style>
+  .btn {
+    @apply at-a
+      mx-2 my-2
+      px-6 py-2
+      w-fit
+      text-white
+      text-xs
+      uppercase
+      bg-primary
+      rounded-full
+      transition duration-150 ease-in-out
+      hover:bg-primary-light
+      focus:ring-2
+      focus:ring-offset-2
+      focus:ring-primary-light;
+  }
+</style>
