--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@ export interface Props {
 }
 
 import fetchTop from '@/api/fetchTop';
-import getImagePath from '@/lib/getImagePath';
+import getImagePath from '@/helpers/getImagePath';
 import ArtImage from '@/components/images/ArtImage.astro';
 import Button from './Button.astro';
 
@@ -14,20 +14,18 @@ const top = await fetchTop(locale);
 
 const { title = '', subtitle = '', items = null } = top || {};
 
-const { title: buttonCaption } = items?.filter(({ image }) => !image)[0];
+const { title: buttonCaption } = items?.find(({ image }) => !image) || {};
 
-const sources = items?.filter(({ image }) => image).map(({ image }) => {
-  const { src, caption } = image;
+const sources = items?.filter(({ image }) => image).map(({ image: { src, caption: media } }) => {
   if (!src) {
     throw new Error('ArtImage: Image src required');
   }
 
-  return { src: getImagePath(src), media: caption };
+  return { src: getImagePath(src), media };
 });
 
-const alt = items && items[0] && items[0].image ? items[0].image.alt : '';
+const alt = items?.find(({ image }) => image).image?.alt || '';
 ---
-
 <div class="grid">
   {sources && <ArtImage sources={sources} alt={alt} loading="eager" classes="col-start-1 row-start-1" />}
   <div class="col-start-1 row-start-1 px-4 text-center flex flex-col-reverse justify-center items-center">
