--- a/src/components/LocalizedLink.astro
+++ b/src/components/LocalizedLink.astro
@@ -1,5 +1,5 @@
 ---
-import { localizePath } from '@/lib/i18n-utils';
+import { localizePath } from '@/helpers/i18n-utils';
 import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 
 const { to, ...rest } = Astro.props;
