--- a/src/components/SEO/components/FacebookArticleMeta.astro
+++ b/src/components/SEO/components/FacebookArticleMeta.astro
@@ -1,12 +1,14 @@
 ---
 export interface Props {
-  datePublished?: string;
-  dateModified?: string;
-  authors?: Author[];
-  tags?: Link[];
+  articleMeta: {
+    datePublished?: string;
+    dateModified?: string;
+    authors?: Author[];
+    tags?: Link[];
+  }
 }
 
-const { datePublished, dateModified, authors, tags } = Astro.props;
+const { datePublished, dateModified, authors, tags } = (Astro.props as Props).articleMeta;
 ---
 
 {datePublished && <meta property="article:published_time" content={datePublished} />}
