--- a/src/components/SEO/components/FacebookMeta.astro
+++ b/src/components/SEO/components/FacebookMeta.astro
@@ -42,7 +42,7 @@ const {
   facebook: { image, fbAppID },
 
   socialLinks,
-} = Astro.props;
+} = Astro.props as Props;
 
 const hasImage = imgUrl || image?.src;
 
@@ -76,14 +76,14 @@ if (hasImage) {
   <meta name="og:image" content={url!} />
   <meta name="og:image:alt" content={alt!} />
 )}
-{hasImage && image?.src && (
+{image?.src && (
   <meta name="og:image:width" content={image.width.toString()} />
   <meta name="og:image:height" content={image.height.toString()} />
 )}
 
-{isArticle && <FacebookArticleMeta {datePublished} {dateModified} {authors} {tags} />}
+{isArticle && <FacebookArticleMeta articleMeta={{ datePublished, dateModified, authors, tags }} />}
 
-{fbAppID && <meta property="fb:app_id" content={fbAppID} />
+{fbAppID && <meta property="fb:app_id" content={fbAppID} />}
 
-{socialLinks?.facebook && (<meta property="article:publisher" content={socialLinks.facebook.to} />)}
-{socialLinks && (Object.keys(socialLinks).map((key) => (<meta property="og:see_also" content={socialLinks[key]!.to} />)))}
+{socialLinks?.facebook && <meta property="article:publisher" content={socialLinks.facebook.to} />}
+{socialLinks && Object.keys(socialLinks).map((key) => <meta property="og:see_also" content={socialLinks[key]!.to} />)}
