--- a/src/components/header/components/Hamburger.astro
+++ b/src/components/header/components/Hamburger.astro
@@ -1,4 +1,4 @@
-<button id="menu-toggle" class="menu-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
+<button id="menu-toggle" class="menu-toggle" type="button" aria-label="Navigation bar toggle" aria-expanded="false">
   <div class="toggle-line"></div>
   <div class="toggle-line"></div>
   <div class="toggle-line"></div>
