--- a/src/components/header/components/Logo.astro
+++ b/src/components/header/components/Logo.astro
@@ -1,6 +1,6 @@
 ---
 import i18n from '@/config/i18n';
-import { localizePath } from '@/lib/i18n-utils';
+import { localizePath } from '@/helpers/i18n-utils';
 import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 
 const locale = getLocaleFromUrlPathname(Astro.request.url.pathname);
