--- a/src/components/images/Image.astro
+++ b/src/components/images/Image.astro
@@ -2,8 +2,8 @@
 import { Markdown } from 'astro/components';
 
 import escapeHTML from '@/lib/escapeHTML';
-import getImageFormats from '@/lib/getImageFormats';
-import { ImageOptions, generatePlaceholder, PlaceholderOptions } from '@/lib/astro-eleventy-img';
+import getImageFormats from '@/helpers/getImageFormats';
+import type { ImageOptions, /* generatePlaceholder, */ PlaceholderOptions } from '@/astro-eleventy-img';
 import { getMetadata, getSrcset } from '@/helpers/image-utils';
 
 interface Props {
