--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,21 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-white font-serif text-muted dark:bg-gray-800 dark:text-gray-50;
-  overflow-x: hidden;
-}
+@layer base {
+  body {
+    @apply bg-white font-serif text-muted  dark:bg-gray-800 dark:text-gray-50;
+    overflow-x: hidden;
+  }
 
-h1,
-h3,
-.heading {
-  @apply font-sans font-bold;
-}
+  h1,
+  h3,
+  .heading {
+    @apply font-sans font-bold;
+  }
 
-h2 {
-  @apply text-muted dark:text-gray-50;
-}
+  h2 {
+    @apply text-muted dark:text-gray-50;
+  }
 
-.body-text__color {
-  @apply text-muted dark:text-gray-50;
+  .body-text__color {
+    @apply text-muted dark:text-gray-50;
+  }
 }
